--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,5 +21,10 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
     "tailwindcss-cli": "^0.1.2"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
