--- a/landing/package.json
+++ b/landing/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hello-pangea/dnd": "^18.0.1",
     "@heroicons/react": "^1.0.6",
+    "country-flag-icons": "^1.5.19",
     "framer-motion": "^12.9.7",
     "lucide-react": "^0.507.0",
     "next": "15.3.0",
