--- a/landing/package.json
+++ b/landing/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing",
+  "name": "tournament-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -29,5 +29,8 @@
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
