--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@types/express-validator": "^2.20.33",
     "bcryptjs": "^2.4.3",
     "bracket-generator": "^3.1.1",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
